--- a/symfony_fw/templates/render/control_panel.html.twig
+++ b/symfony_fw/templates/render/control_panel.html.twig
@@ -240,7 +240,7 @@
                     "apt-get install -y google-chrome-stable=83.0.4103.116-1 firefox-esr=68.9.0esr-1~deb9u1 \n"~
                     "npm install -g selenium-side-runner@3.17.0 --unsafe-perm=true --allow-root \n"~
                     "npm install -g chromedriver@83.0.0 --unsafe-perm=true --allow-root \n"~
-                    "npm install -g geckodriver@1.19.1 --unsafe-perm=true --allow-root \n"~ %}
+                    "npm install -g geckodriver@1.19.1 --unsafe-perm=true --allow-root" %}
                     
                     <pre class="square_code">{{textA}}</pre>
                     
